Understanding data in the bom.csv as well as im.db files

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,523 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Phase 1 Project"
+    "# Phase 1 Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Business Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The head of Microsoft needs to know what types of films are trending so that they can be at the top of the game when opening their new movie studio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Data Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Understanding bom.movie_gross.csv data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "bom_movie_gross = pd.read_csv('data/bom.movie_gross.csv/bom.movie_gross.csv') # Reading into the first dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>studio</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>foreign_gross</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>BV</td>\n",
+       "      <td>415000000.0</td>\n",
+       "      <td>652000000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alice in Wonderland (2010)</td>\n",
+       "      <td>BV</td>\n",
+       "      <td>334200000.0</td>\n",
+       "      <td>691300000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Harry Potter and the Deathly Hallows Part 1</td>\n",
+       "      <td>WB</td>\n",
+       "      <td>296000000.0</td>\n",
+       "      <td>664300000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>WB</td>\n",
+       "      <td>292600000.0</td>\n",
+       "      <td>535700000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Shrek Forever After</td>\n",
+       "      <td>P/DW</td>\n",
+       "      <td>238700000.0</td>\n",
+       "      <td>513900000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         title studio  domestic_gross  \\\n",
+       "0                                  Toy Story 3     BV     415000000.0   \n",
+       "1                   Alice in Wonderland (2010)     BV     334200000.0   \n",
+       "2  Harry Potter and the Deathly Hallows Part 1     WB     296000000.0   \n",
+       "3                                    Inception     WB     292600000.0   \n",
+       "4                          Shrek Forever After   P/DW     238700000.0   \n",
+       "\n",
+       "  foreign_gross  year  \n",
+       "0     652000000  2010  \n",
+       "1     691300000  2010  \n",
+       "2     664300000  2010  \n",
+       "3     535700000  2010  \n",
+       "4     513900000  2010  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bom_movie_gross.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.info of                                             title      studio  domestic_gross  \\\n",
+       "0                                     Toy Story 3          BV     415000000.0   \n",
+       "1                      Alice in Wonderland (2010)          BV     334200000.0   \n",
+       "2     Harry Potter and the Deathly Hallows Part 1          WB     296000000.0   \n",
+       "3                                       Inception          WB     292600000.0   \n",
+       "4                             Shrek Forever After        P/DW     238700000.0   \n",
+       "...                                           ...         ...             ...   \n",
+       "3382                                    The Quake       Magn.          6200.0   \n",
+       "3383                  Edward II (2018 re-release)          FM          4800.0   \n",
+       "3384                                     El Pacto        Sony          2500.0   \n",
+       "3385                                     The Swan  Synergetic          2400.0   \n",
+       "3386                            An Actor Prepares       Grav.          1700.0   \n",
+       "\n",
+       "     foreign_gross  year  \n",
+       "0        652000000  2010  \n",
+       "1        691300000  2010  \n",
+       "2        664300000  2010  \n",
+       "3        535700000  2010  \n",
+       "4        513900000  2010  \n",
+       "...            ...   ...  \n",
+       "3382           NaN  2018  \n",
+       "3383           NaN  2018  \n",
+       "3384           NaN  2018  \n",
+       "3385           NaN  2018  \n",
+       "3386           NaN  2018  \n",
+       "\n",
+       "[3387 rows x 5 columns]>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bom_movie_gross.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'studio', 'domestic_gross', 'foreign_gross', 'year'], dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bom_movie_gross.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3.359000e+03</td>\n",
+       "      <td>3387.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2.874585e+07</td>\n",
+       "      <td>2013.958075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.698250e+07</td>\n",
+       "      <td>2.478141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000e+02</td>\n",
+       "      <td>2010.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.200000e+05</td>\n",
+       "      <td>2012.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.400000e+06</td>\n",
+       "      <td>2014.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.790000e+07</td>\n",
+       "      <td>2016.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>9.367000e+08</td>\n",
+       "      <td>2018.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       domestic_gross         year\n",
+       "count    3.359000e+03  3387.000000\n",
+       "mean     2.874585e+07  2013.958075\n",
+       "std      6.698250e+07     2.478141\n",
+       "min      1.000000e+02  2010.000000\n",
+       "25%      1.200000e+05  2012.000000\n",
+       "50%      1.400000e+06  2014.000000\n",
+       "75%      2.790000e+07  2016.000000\n",
+       "max      9.367000e+08  2018.000000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bom_movie_gross.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Understanding im.db data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "conn = sqlite3.connect('data/im.db/im.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>movie_basics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>directors</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>known_for</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>movie_akas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>movie_ratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>persons</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>principals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>writers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            name\n",
+       "0   movie_basics\n",
+       "1      directors\n",
+       "2      known_for\n",
+       "3     movie_akas\n",
+       "4  movie_ratings\n",
+       "5        persons\n",
+       "6     principals\n",
+       "7        writers"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"SELECT name FROM sqlite_master WHERE type='table';\"\n",
+    "tables = pd.read_sql(query, conn)\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table: movie_basics\n",
+      "    movie_id                    primary_title              original_title  \\\n",
+      "0  tt0063540                        Sunghursh                   Sunghursh   \n",
+      "1  tt0066787  One Day Before the Rainy Season             Ashad Ka Ek Din   \n",
+      "2  tt0069049       The Other Side of the Wind  The Other Side of the Wind   \n",
+      "3  tt0069204                  Sabse Bada Sukh             Sabse Bada Sukh   \n",
+      "4  tt0100275         The Wandering Soap Opera       La Telenovela Errante   \n",
+      "\n",
+      "   start_year  runtime_minutes                genres  \n",
+      "0        2013            175.0    Action,Crime,Drama  \n",
+      "1        2019            114.0       Biography,Drama  \n",
+      "2        2018            122.0                 Drama  \n",
+      "3        2018              NaN          Comedy,Drama  \n",
+      "4        2017             80.0  Comedy,Drama,Fantasy  \n",
+      "--------------------------------------------------\n",
+      "Table: directors\n",
+      "    movie_id  person_id\n",
+      "0  tt0285252  nm0899854\n",
+      "1  tt0462036  nm1940585\n",
+      "2  tt0835418  nm0151540\n",
+      "3  tt0835418  nm0151540\n",
+      "4  tt0878654  nm0089502\n",
+      "--------------------------------------------------\n",
+      "Table: known_for\n",
+      "   person_id   movie_id\n",
+      "0  nm0061671  tt0837562\n",
+      "1  nm0061671  tt2398241\n",
+      "2  nm0061671  tt0844471\n",
+      "3  nm0061671  tt0118553\n",
+      "4  nm0061865  tt0896534\n",
+      "--------------------------------------------------\n",
+      "Table: movie_akas\n",
+      "    movie_id  ordering                                    title region  \\\n",
+      "0  tt0369610        10                            Джурасик свят     BG   \n",
+      "1  tt0369610        11                        Jurashikku warudo     JP   \n",
+      "2  tt0369610        12  Jurassic World: O Mundo dos Dinossauros     BR   \n",
+      "3  tt0369610        13                  O Mundo dos Dinossauros     BR   \n",
+      "4  tt0369610        14                           Jurassic World     FR   \n",
+      "\n",
+      "  language        types   attributes  is_original_title  \n",
+      "0       bg         None         None                0.0  \n",
+      "1     None  imdbDisplay         None                0.0  \n",
+      "2     None  imdbDisplay         None                0.0  \n",
+      "3     None         None  short title                0.0  \n",
+      "4     None  imdbDisplay         None                0.0  \n",
+      "--------------------------------------------------\n",
+      "Table: movie_ratings\n",
+      "     movie_id  averagerating  numvotes\n",
+      "0  tt10356526            8.3        31\n",
+      "1  tt10384606            8.9       559\n",
+      "2   tt1042974            6.4        20\n",
+      "3   tt1043726            4.2     50352\n",
+      "4   tt1060240            6.5        21\n",
+      "--------------------------------------------------\n",
+      "Table: persons\n",
+      "   person_id       primary_name birth_year death_year  \\\n",
+      "0  nm0061671  Mary Ellen Bauder       None       None   \n",
+      "1  nm0061865       Joseph Bauer       None       None   \n",
+      "2  nm0062070         Bruce Baum       None       None   \n",
+      "3  nm0062195       Axel Baumann       None       None   \n",
+      "4  nm0062798        Pete Baxter       None       None   \n",
+      "\n",
+      "                                 primary_profession  \n",
+      "0         miscellaneous,production_manager,producer  \n",
+      "1        composer,music_department,sound_department  \n",
+      "2                        miscellaneous,actor,writer  \n",
+      "3  camera_department,cinematographer,art_department  \n",
+      "4  production_designer,art_department,set_decorator  \n",
+      "--------------------------------------------------\n",
+      "Table: principals\n",
+      "    movie_id  ordering  person_id  category       job        characters\n",
+      "0  tt0111414         1  nm0246005     actor      None       [\"The Man\"]\n",
+      "1  tt0111414         2  nm0398271  director      None              None\n",
+      "2  tt0111414         3  nm3739909  producer  producer              None\n",
+      "3  tt0323808        10  nm0059247    editor      None              None\n",
+      "4  tt0323808         1  nm3579312   actress      None  [\"Beth Boothby\"]\n",
+      "--------------------------------------------------\n",
+      "Table: writers\n",
+      "    movie_id  person_id\n",
+      "0  tt0285252  nm0899854\n",
+      "1  tt0438973  nm0175726\n",
+      "2  tt0438973  nm1802864\n",
+      "3  tt0462036  nm1940585\n",
+      "4  tt0835418  nm0310087\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for table_name in tables['name']:\n",
+    "    query = f\"SELECT * FROM {table_name} LIMIT 5;\"\n",
+    "    sample_data = pd.read_sql(query, conn)\n",
+    "    print(f\"Table: {table_name}\")\n",
+    "    print(sample_data)\n",
+    "    print(\"-\" * 50)"
    ]
   }
  ],
@@ -15,7 +531,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.5"
   }
  },
