--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "4     513900000  2010  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "[3387 rows x 5 columns]>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "Index(['title', 'studio', 'domestic_gross', 'foreign_gross', 'year'], dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "max      9.367000e+08  2018.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "7        writers"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -516,11 +516,73 @@
    ],
    "source": [
     "for table_name in tables['name']:\n",
+    "    cursor = conn.cursor()\n",
     "    query = f\"SELECT * FROM {table_name} LIMIT 5;\"\n",
-    "    sample_data = pd.read_sql(query, conn)\n",
+    "    cursor.execute(query) # helps execute and retrieve data\n",
+    "    sample_data = pd.DataFrame(cursor.fetchall(), columns=[col[0] for col in cursor.description])\n",
     "    print(f\"Table: {table_name}\")\n",
     "    print(sample_data)\n",
     "    print(\"-\" * 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Focusing on two tables movie_basics and movie_ratings because movie basics shows the different types of genres as well as the runtimes and movie_ratings shows the average ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table: movie_ratings\n",
+      "     movie_id  averagerating  numvotes\n",
+      "0  tt10356526            8.3        31\n",
+      "1  tt10384606            8.9       559\n",
+      "2   tt1042974            6.4        20\n",
+      "3   tt1043726            4.2     50352\n",
+      "4   tt1060240            6.5        21\n",
+      "--------------------------------------------------\n",
+      "Table: movie_basics\n",
+      "    movie_id                    primary_title              original_title  \\\n",
+      "0  tt0063540                        Sunghursh                   Sunghursh   \n",
+      "1  tt0066787  One Day Before the Rainy Season             Ashad Ka Ek Din   \n",
+      "2  tt0069049       The Other Side of the Wind  The Other Side of the Wind   \n",
+      "3  tt0069204                  Sabse Bada Sukh             Sabse Bada Sukh   \n",
+      "4  tt0100275         The Wandering Soap Opera       La Telenovela Errante   \n",
+      "\n",
+      "   start_year  runtime_minutes                genres  \n",
+      "0        2013            175.0    Action,Crime,Drama  \n",
+      "1        2019            114.0       Biography,Drama  \n",
+      "2        2018            122.0                 Drama  \n",
+      "3        2018              NaN          Comedy,Drama  \n",
+      "4        2017             80.0  Comedy,Drama,Fantasy  \n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "table_names = ['movie_ratings', 'movie_basics']\n",
+    "for table_name in table_names:\n",
+    "    query = f\"SELECT * FROM {table_name} LIMIT 5;\"\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(query)\n",
+    "    \n",
+    "    # Fetch the sample data and load into a DataFrame\n",
+    "    sample_data = pd.DataFrame(cursor.fetchall(), columns=[col[0] for col in cursor.description])\n",
+    "    \n",
+    "    print(f\"Table: {table_name}\")\n",
+    "    print(sample_data)\n",
+    "    print(\"-\" * 50)\n",
+    "\n",
+    "# Close connection \n",
+    "conn.close()"
    ]
   }
  ],
