Cleaned missing values on the bom.movie_gross.csv data

--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The head of Microsoft needs to know what types of films are trending so that they can be at the top of the game when opening their new movie studio"
+    "The head of Microsoft needs to know what types of films are trending so that they can be at the top of the game when opening their new movie studio\n",
+    "### Some of the questions to be answer\n",
+    "1. What are the top 5 genres currently trending?\n",
+    "2. How much do certain genres generate?\n",
+    "3. What is the average time of movies?"
    ]
   },
   {
@@ -37,18 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "bom_movie_gross = pd.read_csv('data/bom.movie_gross.csv/bom.movie_gross.csv') # Reading into the first dataset"
+    "bom_movie_gross_df = pd.read_csv('data/bom.movie_gross.csv/bom.movie_gross.csv') # Reading into the first dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -140,18 +144,18 @@
        "4     513900000  2010  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bom_movie_gross.head()"
+    "bom_movie_gross_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,18 +190,18 @@
        "[3387 rows x 5 columns]>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bom_movie_gross.info"
+    "bom_movie_gross_df.info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -206,18 +210,18 @@
        "Index(['title', 'studio', 'domestic_gross', 'foreign_gross', 'year'], dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bom_movie_gross.columns"
+    "bom_movie_gross_df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -302,13 +306,13 @@
        "max      9.367000e+08  2018.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bom_movie_gross.describe()"
+    "bom_movie_gross_df.describe()"
    ]
   },
   {
@@ -320,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -406,20 +410,20 @@
        "7        writers"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query = \"SELECT name FROM sqlite_master WHERE type='table';\"\n",
-    "tables = pd.read_sql(query, conn)\n",
-    "tables"
+    "imdb_tables = pd.read_sql(query, conn)\n",
+    "imdb_tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -515,13 +519,13 @@
     }
    ],
    "source": [
-    "for table_name in tables['name']:\n",
+    "for imdb_table_name in imdb_tables['name']:\n",
     "    cursor = conn.cursor()\n",
-    "    query = f\"SELECT * FROM {table_name} LIMIT 5;\"\n",
+    "    query = f\"SELECT * FROM {imdb_table_name} LIMIT 5;\"\n",
     "    cursor.execute(query) # helps execute and retrieve data\n",
-    "    sample_data = pd.DataFrame(cursor.fetchall(), columns=[col[0] for col in cursor.description])\n",
-    "    print(f\"Table: {table_name}\")\n",
-    "    print(sample_data)\n",
+    "    imdb_data_df = pd.DataFrame(cursor.fetchall(), columns=[col[0] for col in cursor.description])\n",
+    "    print(f\"Table: {imdb_table_name}\")\n",
+    "    print(imdb_data_df)\n",
     "    print(\"-\" * 50)"
    ]
   },
@@ -534,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -583,6 +587,186 @@
     "\n",
     "# Close connection \n",
     "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After understanding the  bom_movie_gross.csv data, I decided to check for missing or inconsistent values in the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title                0\n",
+       "studio               5\n",
+       "domestic_gross      28\n",
+       "foreign_gross     1350\n",
+       "year                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_value_total = bom_movie_gross_df.isnull().sum() # Checking which column has missing values\n",
+    "missing_value_total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title              0.000000\n",
+       "studio             0.147623\n",
+       "domestic_gross     0.826690\n",
+       "foreign_gross     39.858282\n",
+       "year               0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_value_percentage = (bom_movie_gross_df.isnull().sum() / len(bom_movie_gross_df)) * 100\n",
+    "missing_value_percentage       "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I realized that foreign gross has a high number of missing values so I made the decision to add zeros to all the rows that had a null value. I made the assumption that those particular movies did not receive any foreign_gross that year."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated DataFrame:\n",
+      "                                            title      studio  domestic_gross  \\\n",
+      "0                                     Toy Story 3          BV     415000000.0   \n",
+      "1                      Alice in Wonderland (2010)          BV     334200000.0   \n",
+      "2     Harry Potter and the Deathly Hallows Part 1          WB     296000000.0   \n",
+      "3                                       Inception          WB     292600000.0   \n",
+      "4                             Shrek Forever After        P/DW     238700000.0   \n",
+      "...                                           ...         ...             ...   \n",
+      "3382                                    The Quake       Magn.          6200.0   \n",
+      "3383                  Edward II (2018 re-release)          FM          4800.0   \n",
+      "3384                                     El Pacto        Sony          2500.0   \n",
+      "3385                                     The Swan  Synergetic          2400.0   \n",
+      "3386                            An Actor Prepares       Grav.          1700.0   \n",
+      "\n",
+      "     foreign_gross  year  \n",
+      "0        652000000  2010  \n",
+      "1        691300000  2010  \n",
+      "2        664300000  2010  \n",
+      "3        535700000  2010  \n",
+      "4        513900000  2010  \n",
+      "...            ...   ...  \n",
+      "3382             0  2018  \n",
+      "3383             0  2018  \n",
+      "3384             0  2018  \n",
+      "3385             0  2018  \n",
+      "3386             0  2018  \n",
+      "\n",
+      "[3387 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bom_movie_gross_df['foreign_gross'] = bom_movie_gross_df['foreign_gross'].fillna(0)\n",
+    "print(\"Updated DataFrame:\")\n",
+    "print(bom_movie_gross_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After understanding the imdb data, I decided to check for missing values in the tables of movie_basics and movie_ratings.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movie_id           0\n",
+       "primary_title      0\n",
+       "original_title     0\n",
+       "start_year         0\n",
+       "runtime_minutes    1\n",
+       "genres             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_value_total = sample_data.isnull().sum() # Checking which column has missing values\n",
+    "missing_value_total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movie_id           0.000000\n",
+       "primary_title      0.000000\n",
+       "original_title     0.000000\n",
+       "start_year         0.000000\n",
+       "runtime_minutes    0.029525\n",
+       "genres             0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_value_percentage = (sample_data.isnull().sum() / len(bom_movie_gross_df)) * 100\n",
+    "missing_value_percentage "
    ]
   }
  ],
