Cleaned all the missing values in both datasets chosen

--- a/index.ipynb
+++ b/index.ipynb
@@ -579,10 +579,10 @@
     "    cursor.execute(query)\n",
     "    \n",
     "    # Fetch the sample data and load into a DataFrame\n",
-    "    sample_data = pd.DataFrame(cursor.fetchall(), columns=[col[0] for col in cursor.description])\n",
+    "    imdb_df = pd.DataFrame(cursor.fetchall(), columns=[col[0] for col in cursor.description])\n",
     "    \n",
     "    print(f\"Table: {table_name}\")\n",
-    "    print(sample_data)\n",
+    "    print(imdb_df)\n",
     "    print(\"-\" * 50)\n",
     "\n",
     "# Close connection \n",
@@ -600,33 +600,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After understanding the  bom_movie_gross.csv data, I decided to check for missing or inconsistent values in the data"
+    "After understanding the  bom_movie_gross.csv data, I decided to check for missing or inconsistent values in the data.\n",
+    "I have created a function which checks for missing values in both the bom.movie_gross_df and the imdb_df Dataframes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "title                0\n",
-       "studio               5\n",
-       "domestic_gross      28\n",
-       "foreign_gross     1350\n",
-       "year                 0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "missing_value_total = bom_movie_gross_df.isnull().sum() # Checking which column has missing values\n",
-    "missing_value_total"
+    "def print_missing_values(dataframe):\n",
+    "    missing_value_total = dataframe.isnull().sum()\n",
+    "    print(missing_value_total)"
    ]
   },
   {
@@ -635,36 +621,45 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "title              0.000000\n",
-       "studio             0.147623\n",
-       "domestic_gross     0.826690\n",
-       "foreign_gross     39.858282\n",
-       "year               0.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title                0\n",
+      "studio               5\n",
+      "domestic_gross      28\n",
+      "foreign_gross     1350\n",
+      "year                 0\n",
+      "dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "missing_value_percentage = (bom_movie_gross_df.isnull().sum() / len(bom_movie_gross_df)) * 100\n",
-    "missing_value_percentage       "
+    "print_missing_values(bom_movie_gross_df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I realized that foreign gross has a high number of missing values so I made the decision to add zeros to all the rows that had a null value. I made the assumption that those particular movies did not receive any foreign_gross that year."
+    "I realized that foreign gross has a high number of missing values so I made the decision to add zeros to all the rows that had a null value. I made the assumption that those particular movies did not receive any foreign_gross that year.\n",
+    "I also made the decision to fill the studio missing valuse with 'Not Available' just to indicate that there was no information for those studio names\n",
+    "I also filled the domestic_gross with zeros to indicated that those movies did not receive any domestic_gross "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fill_missing_values(dataframe, column, fill_value):\n",
+    "    dataframe[column] = dataframe[column].fillna(fill_value)\n",
+    "    return dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -703,9 +698,34 @@
     }
    ],
    "source": [
-    "bom_movie_gross_df['foreign_gross'] = bom_movie_gross_df['foreign_gross'].fillna(0)\n",
+    "bom_movie_gross_df = fill_missing_values(bom_movie_gross_df, 'foreign_gross', 0)\n",
+    "bom_movie_gross_df = fill_missing_values(bom_movie_gross_df, 'studio', 'Not Available')\n",
+    "bom_movie_gross_df = fill_missing_values(bom_movie_gross_df, 'domestic_gross', 0)\n",
+    "\n",
     "print(\"Updated DataFrame:\")\n",
     "print(bom_movie_gross_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title             0\n",
+      "studio            0\n",
+      "domestic_gross    0\n",
+      "foreign_gross     0\n",
+      "year              0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_missing_values(bom_movie_gross_df)"
    ]
   },
   {
@@ -717,56 +737,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "movie_id           0\n",
-       "primary_title      0\n",
-       "original_title     0\n",
-       "start_year         0\n",
-       "runtime_minutes    1\n",
-       "genres             0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "missing_value_total = sample_data.isnull().sum() # Checking which column has missing values\n",
-    "missing_value_total"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "movie_id           0.000000\n",
-       "primary_title      0.000000\n",
-       "original_title     0.000000\n",
-       "start_year         0.000000\n",
-       "runtime_minutes    0.029525\n",
-       "genres             0.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "movie_id           0\n",
+      "primary_title      0\n",
+      "original_title     0\n",
+      "start_year         0\n",
+      "runtime_minutes    1\n",
+      "genres             0\n",
+      "dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "missing_value_percentage = (sample_data.isnull().sum() / len(bom_movie_gross_df)) * 100\n",
-    "missing_value_percentage "
+    "print_missing_values(imdb_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I realized that runtime_minutes has one row that has a missing value so i decided to drop that row "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imdb_df = imdb_df.dropna(subset=['runtime_minutes'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "movie_id           0\n",
+      "primary_title      0\n",
+      "original_title     0\n",
+      "start_year         0\n",
+      "runtime_minutes    0\n",
+      "genres             0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_missing_values(imdb_df)"
    ]
   }
  ],
